fix clouds random spawn postition, animation and z-indexing

--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html {}
+
 
 ::-webkit-scrollbar {
   width: 0px;
